--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
   "name": "pokedex-app",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "private": true,
+  "description": "Aplicação desenvolvida como parte do desafio proposto no curso DevQuest, utilizando React com Vite para entregar uma experiência interativa de visualização de Pokémons.",
   "homepage": "https://vanderlei94.github.io/pokedex-app",
+  "bugs": {
+    "url": "https://github.com/Vanderlei94/pokedex-app/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Vanderlei94/pokedex-app.git"
+  },
+  "license": "ISC",
+  "author": "",
+  "type": "module",
+  "main": "eslint.config.js",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll --detectOpenHandles --forceExit",
+    "watch": "jest --watchAll --detectOpenHandles --forceExit"
   },
   "dependencies": {
     "axios": "^1.8.2",
@@ -20,15 +33,24 @@
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.21.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "vite": "^6.2.0"
   }
 }
